# quickjs-rs

./: .gitignore  .pr-description.md  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  hatch_build.py  pyproject.toml
.github/: THREAT_MODEL.md
.github/scripts/: activate_venv.py  check_cargo_lock_git_sources.py
.github/workflows/: benchmarks.yml  build-wasm.yml  dependency-security.yml  memory-profiling.yml  release.yml  test.yml
artifacts/profiles/: eval-custom-all.speedscope.json  eval-custom-eval.speedscope.json  eval-full.speedscope.json  host-int-custom-all.speedscope.json  host-int-custom-eval.speedscope.json  host-int-full.speedscope.json
benchmarks/: README.md  conftest.py  context_init_cases.py  memory_experiment.py  profile_context_init.py  test_context_init.py  test_eval_async.py  test_eval_sync.py  test_fleet.py  test_host_functions.py  test_marshaling.py  test_memory.py  test_snapshot.py  test_snapshot_extraction.py  test_startup.py  test_threaded_stress.py
conformance/abi/: README.md  codec_vectors.jsonl
corpus/: AUDIT.md  README.md  codec_vectors.jsonl  gen_generated_vectors.py
crates/: Cargo.toml
crates/quickjs-core/: Cargo.toml  FEASIBILITY.md
crates/quickjs-core-abi/: Cargo.toml
crates/quickjs-core-abi/src/: decode.rs  encode.rs  frame.rs  lib.rs  reason.rs  status.rs  value.rs
crates/quickjs-core-abi/tests/: conformance.rs
crates/quickjs-core/src/: host.rs  lib.rs  marshal.rs  mem.rs  registry.rs
crates/quickjs-wasm/: Cargo.toml
crates/quickjs-wasm-transform/: Cargo.toml
crates/quickjs-wasm-transform/src/: lib.rs  mem.rs
crates/quickjs-wasm/.cargo/: config.toml
crates/quickjs-wasm/src/: engine.rs  error.rs  handles.rs  hostfn.rs  lib.rs  mem.rs  modules.rs  promise.rs
docs/: driver-api-v2.md  langgraph-persist-send-writes-on-interrupt-spec.md  oxc-transpile-migration-spec.md  repl-wasm-security-hardening-spec.md
docs/adr/: 0001-portable-wasm-execution-plane.md  0002-wire-codec.md
quickjs_rs/: __init__.py  _bridge.py  _engine.py  _engine.pyi  _transform.py  _wasmtime.py  context.py  driver.py  errors.py  globals.py  handle.py  modules.py  runtime.py  snapshot.py  threading.py  transforms.py
quickjs_wasm/: __init__.py  _bridge.py  _msgpack.py  context.py  errors.py  globals.py  handle.py  runtime.py
scripts/: build_guest.py  install-wasi-sdk.sh  update-quickjs.sh  verify-reproducible.sh
spec/: benchmarks.md  design.md  implementation.md  memory-profiling.md  module-loading.md  quickjs.wit
spikes/: README.md  build_feasibility_run.py  epoch_gil_spike.py  guest_eval_run.py  guest_timeout_run.py  interrupt_spike.wasm  interrupt_spike.wat  main_thread_freeze_spike.mjs  node_worker_interrupt_spike.mjs  stack_check_run.py
src/: ast.rs  context.rs  errors.rs  handle.rs  host_fn.rs  lib.rs  marshal.rs  modules.rs  reentrance.rs  runtime.rs  snapshot.rs  transpile.rs
tests/: conftest.py  test_async.py  test_async_host_functions.py  test_driver.py  test_errors.py  test_exceptions.py  test_globals.py  test_handles.py  test_host_functions.py  test_isolation.py  test_langgraph_quickjs_e2e.py  test_langgraph_quickjs_multi_interrupt_e2e.py  test_limits.py  test_modules.py  test_objects.py  test_primitives.py  test_reentrance.py  test_runtime_memory.py  test_settle_failure.py  test_smoke.py  test_snapshot.py  test_snapshot_tracking.py  test_threading.py  test_transform.py
tests/shim/: test_async_dispatch.py  test_promise_registration.py
wasm/: CMakeLists.txt  build.sh  shim.c  shim.h  wasi-sdk.cmake
