[package]
name = "quickjs-rs-python"
version = "0.3.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rquickjs = { version = "0.11", features = [
    "classes",
    "properties",
    "futures",
    # v0.4: enables the Resolver / Loader traits + Runtime::set_loader
    # for ES module support. See spec/module-loading.md §5.1.
    # The feature is trait-surface only — no behavior change to any
    # existing code path. Adding it unlocks the FlatModuleStore
    # implementation that lands in step 3.
    "loader",
    # `bindgen` is deliberately omitted: rquickjs-sys ships
    # pre-generated bindings for every target we build wheels for
    # (aarch64 / x86_64 × linux-gnu / linux-musl / apple-darwin /
    # pc-windows-msvc). Enabling bindgen would pull in libclang +
    # glibc-devel at build time, which breaks the manylinux build
    # container (`bits/libc-header-start.h: file not found`) and
    # slows cold compiles everywhere. If we ever target a platform
    # without a pre-generated binding file (see
    # rquickjs-sys/src/bindings/), add bindgen back here and
    # ensure the build environment has libclang.
] }
# v0.4 TypeScript support — str entries ending in .ts/.tsx are
# transparently type-stripped at install() time. See
# spec/module-loading.md §5.5.
#
# Pinned to a specific commit rather than `branch = "main"` because
# oxidase is a single-maintainer project not (yet) on crates.io; a
# floating branch dep would let a force-push or rename break our
# build without warning. The commit was measured to cost ~400 KiB
# on the linked dylib (+28% over the module-loading-only baseline).
oxidase = { git = "https://github.com/branchseer/oxidase", rev = "045ea46b604cee97c65f1eeac05dcdbc5eb0be25" }

[profile.release]
lto = true
codegen-units = 1
strip = true
