[package]
name = "quickjs-rs-python"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rquickjs = { version = "0.11", features = [
    "classes",
    "properties",
    "futures",
    # Enables Resolver / Loader traits + Runtime::set_loader
    # for ES module support.
    # The feature is trait-surface only — no behavior change to any
    # existing code path.
    "loader",
    # `bindgen` is deliberately omitted: rquickjs-sys ships
    # pre-generated bindings for every target we build wheels for
    # (aarch64 / x86_64 × linux-gnu / linux-musl / apple-darwin /
    # pc-windows-msvc). Enabling bindgen would pull in libclang +
    # glibc-devel at build time, which breaks the manylinux build
    # container (`bits/libc-header-start.h: file not found`) and
    # slows cold compiles everywhere. If we ever target a platform
    # without a pre-generated binding file (see
    # rquickjs-sys/src/bindings/), add bindgen back here and
    # ensure the build environment has libclang.
] }
# OXC pipeline for snapshot extraction + TypeScript transpilation.
# Keep all OXC crates on one coherent version line.
oxc_allocator = "0.31.0"
oxc_ast = "0.31.0"
oxc_codegen = "0.31.0"
oxc_parser = "0.31.0"
oxc_semantic = "0.31.0"
oxc_span = "0.31.0"
oxc_transformer = "0.31.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind" # required: see src/reentrance.rs — PyO3 catch_unwind + Guard safety
