[package]
name = "quickjs-rs-python"
version = "0.1.1"
edition = "2021"
rust-version = "1.75"

[lib]
name = "_engine"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
rquickjs = { version = "0.11", features = [
  "classes",
  "properties",
  "futures",
  # Enables Resolver / Loader traits + Runtime::set_loader
  # for ES module support.
  # The feature is trait-surface only — no behavior change to any
  # existing code path.
  "loader",
  # `bindgen` is deliberately omitted: rquickjs-sys ships
  # pre-generated bindings for every target we build wheels for
  # (aarch64 / x86_64 × linux-gnu / linux-musl / apple-darwin /
  # pc-windows-msvc). Enabling bindgen would pull in libclang +
  # glibc-devel at build time, which breaks the manylinux build
  # container (`bits/libc-header-start.h: file not found`) and
  # slows cold compiles everywhere. If we ever target a platform
  # without a pre-generated binding file (see
  # rquickjs-sys/src/bindings/), add bindgen back here and
  # ensure the build environment has libclang.
] }
# TypeScript support — str entries ending in .ts/.tsx are
# transparently type-stripped at install() time.
#
# Pinned to a specific commit rather than `branch = "main"` because
# oxidase is a single-maintainer project not (yet) on crates.io; a
# floating branch dep would let a force-push or rename break our
# build without warning. The commit was measured to cost ~400 KiB
# on the linked dylib (+28% over the module-loading-only baseline).
oxidase = { git = "https://github.com/branchseer/oxidase", rev = "045ea46b604cee97c65f1eeac05dcdbc5eb0be25" }
# Snapshot name extraction parser.
# Keep the same source identity as oxidase (`branch = "ast_alloc"`), otherwise
# Cargo resolves two parallel oxc graphs (branch + rev) and compiles everything
# twice. The exact tested commit remains pinned in Cargo.lock.
oxc_allocator = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_ast = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_parser = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
oxc_span = { git = "https://github.com/branchseer/oxc", branch = "ast_alloc" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind" # required: see src/reentrance.rs — PyO3 catch_unwind + Guard safety
