[build-system]
requires = ["maturin>=1.5,<2"]
build-backend = "maturin"

[project]
name = "quickjs-rs"
version = "0.1.1"
description = "Sandboxed JavaScript execution for Python, via PyO3 + rquickjs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "LangChain" }]
keywords = ["quickjs", "javascript", "sandbox", "pyo3", "rust"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio>=0.23", "ruff", "mypy"]
bench = ["pytest-codspeed>=4.3.0", "matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/langchain-ai/quickjs-rs"
Issues = "https://github.com/langchain-ai/quickjs-rs/issues"

[tool.maturin]
python-source = "."
module-name = "quickjs_rs._engine"
features = ["pyo3/extension-module"]
include = [{ path = "quickjs_rs/py.typed", format = "sdist" }]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["quickjs_rs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::ResourceWarning"]
asyncio_mode = "auto"
# Collect both test_ (correctness) and bench_ (benchmark) functions.
# Filenames stay `test_*.py` per benchmarks/README.md; function
# names use `bench_` to visually
# distinguish benchmarks from correctness tests. Benchmarks live
# in benchmarks/ (outside testpaths); tests/ has no bench_
# functions, so the expanded pattern doesn't change correctness-
# test collection.
python_functions = ["test_*", "bench_*"]
