[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "quickjs-rs"
version = "0.2.4"
description = "Sandboxed JavaScript execution for Python, via wasmtime + rquickjs."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "LangChain" }]
keywords = ["quickjs", "javascript", "sandbox", "wasm", "wasmtime"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Interpreters",
]
dependencies = ["wasmtime>=45"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov", "pytest-asyncio>=0.23", "ruff", "mypy"]
bench = ["pytest-codspeed>=4.3.0", "matplotlib>=3.8"]

[project.urls]
Homepage = "https://github.com/langchain-ai/quickjs-rs"
Issues = "https://github.com/langchain-ai/quickjs-rs/issues"

[tool.hatch.build.targets.wheel]
packages = ["quickjs_rs"]
# WASM guests are produced by the build hook and force-included from there;
# they are gitignored, never committed.
artifacts = ["quickjs_rs/_guest.wasm", "quickjs_rs/_transform.wasm"]

[tool.hatch.build.targets.sdist]
# Ship the guest crate sources so an sdist can rebuild the wasm from source.
include = [
  "quickjs_rs",
  "crates/quickjs-wasm",
  "crates/quickjs-wasm-transform",
  "scripts/build_guest.py",
  "hatch_build.py",
  "README.md",
  "LICENSE",
]

[tool.hatch.build.hooks.custom]
# hatch_build.py:GuestWasmBuildHook runs scripts/build_guest.py before
# packaging so the wheel contains the bundled wasm guests.
path = "hatch_build.py"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["quickjs_rs"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error::ResourceWarning"]
asyncio_mode = "auto"
# Collect both test_ (correctness) and bench_ (benchmark) functions.
# Filenames stay `test_*.py` per benchmarks/README.md; function
# names use `bench_` to visually distinguish benchmarks from
# correctness tests. Benchmarks live in benchmarks/ (outside testpaths);
# tests/ has no bench_ functions, so the expanded pattern doesn't change
# correctness-test collection.
python_functions = ["test_*", "bench_*"]
