# Workspace for the WASM execution-plane crates. Deliberately separate from
# the repo-root `quickjs-rs-python` PyO3 crate's build graph:
#   - quickjs-core-abi : pure host Rust — shared ABI structs + wire codec,
#                        the reference codec validated against
#                        conformance/abi/codec_vectors.jsonl. No wasm/rquickjs.
#   - quickjs-core     : the wasm guest (rquickjs, wasm32-wasip1). Depends on
#                        quickjs-core-abi.
[workspace]
resolver = "2"
members = ["quickjs-core", "quickjs-core-abi"]

# Size-optimized release for the wasm guest artifact (quickjs-core).
# Workspace-level because cargo ignores per-package profiles in a workspace.
[profile.release]
opt-level = "z"
lto = true
strip = true
