# Standalone workspace: keeps this feasibility spike independent of the
# root native PyO3 crate's build graph and target dir.
[workspace]

[package]
name = "quickjs-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Re-resolved at build time rather than pinned from the old artifact.
# bindgen deliberately omitted on the first attempt: if rquickjs-sys has
# no pre-generated bindings for wasm32-wasip1 the build will fail loudly,
# which is itself a verdict (we then add "bindgen" and record the cost).
rquickjs = { version = "0.11", default-features = false }

[profile.release]
opt-level = "z"
lto = true
strip = true
