[package]
name = "quickjs-core"
version = "0.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib"]

[dependencies]
# Re-resolved at build time rather than pinned from the old artifact.
# bindgen deliberately omitted on the first attempt: if rquickjs-sys has
# no pre-generated bindings for wasm32-wasip1 the build will fail loudly,
# which is itself a verdict (we then add "bindgen" and record the cost).
rquickjs = { version = "0.12", default-features = false }

# Note: the stack-check spike temporarily added a [patch.crates-io]
# redirect to a vendored+patched rquickjs-sys to prove the wasi
# stack-limit fix end-to-end (see FEASIBILITY.md, Stack-check verdict).
# Reverted after the verdict; the real patch-delivery mechanism is a
# Phase 1 decision.
#
# Note: the size-optimized release profile (opt-level=z, lto, strip) for the
# wasm artifact lives at the workspace root (crates/Cargo.toml) — cargo
# ignores per-package profiles in a workspace.
